# Gates

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
assets/shaders/: shader.vert
circuits/: simple_adder.gates
include/: pch.hpp
include/Engine/: Application.hpp  OrthographicCamera.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/Gates/: DataSerializer.hpp  GatesApplication.hpp  LogicCircuit.hpp  LogicGate.hpp  LogicGates.hpp  include.hpp
include/SimX/: PhysicsEngine.hpp  SimXApplication.hpp
include/Util/: Logger.hpp  Misc.hpp  UUID.hpp
shaders/: shader.frag  shader.vert
src/: main.cpp
src/Engine/: Application.cpp  OrthographicCamera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/Gates/: DataSerializer.cpp  GatesApplication.cpp  LogicCircuit.cpp  LogicGate.cpp  LogicGates.cpp
src/SimX/: DataSerializer.cpp  PhysicsEngine.cpp  SimXApplication.cpp
src/Util/: Logger.cpp  Misc.cpp  UUID.cpp
